# tfc-github-actions

./: .gitignore  README.md
.github/workflows/: ci.yml
lambda-api/: Cargo.toml  event.json  example_response.txt
lambda-api-orig/: example_response.txt
lambda-api-orig/src/: main.rs
lambda-api/src/: main.rs
terraform/: cloud.tf  main.tf  microservice-1.tf  output.tf  outputs.tf  sample-order-data.json  variables.tf  versions.tf
terraform/app/: main.tf  variables.tf  versions.tf
