[package]
name = "lambda-api"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Perez - estebanpbuday@yahoo.es"]
description = "A simple example using Rust + AWS Lambda."
license = "GPL-3"
repository = "https://github.com/mjovanc/rust-aws-lambda"
rustc = "1.75.0"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
lambda_runtime = "0.13.0"
aws-sdk-eventbridge = "1.46.0"
serde_json = "=1.0.1"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
