[package]
name = "lambda-api"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Perez - estebanpbuday@yahoo.es"]
description = "A simple example using Rust + AWS Lambda."
license = "GPL-3"
repository = "https://github.com/mjovanc/rust-aws-lambda"
rustc = "1.75.0"

[dependencies]
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }
lambda_runtime = "0.13.0"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
serde_json = "1.0.128"
aws-config = "1.5.7"
aws-sdk-dynamodb = "1.48.0"
