[package]
name = "lambda-api"
version = "0.1.0"
edition = "2021"
authors = ["Esteban Perez - estebanpbuday@yahoo.es"]
description = "A simple example using Rust + AWS Lambda."
license = "GPL-3"
repository = "https://github.com/mjovanc/rust-aws-lambda"
rustc = "1.75.0"

[dependencies]
lambda_http = "0.13.0"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
aws-config = "1.5.4"
aws-sdk-bedrockruntime = "1.40.0"
aws-smithy-runtime-api = "1.7.1"
aws-smithy-types = "1.2.0"
reqwest = "0.12.5"
serde = "1.0.204"
serde_json = "1.0.120"

